@@ -3,12 +3,12 @@ Vinagre Installation Instructions
 
 You'll need the devel packages of the following libraries:
 
- - gtk+-2.0 >= 2.11
+ - gtk+ >= 2.12
+ - glib >= 2.15.3
  - libglade-2.0
  - gconf-2.0
- - gnome-vfs
  - gnome-keyring
- - gtk-vnc widget >= 0.3 (http://gtk-vnc.sf.net)
+ - gtk-vnc widget >= 0.3.2 (http://gtk-vnc.sf.net)
 
 To compile it, just do:
 
