@@ -1,3 +1,10 @@
+2008-01-24  Jonh Wendell <jwendell@gnome.org>
+
+	* configure.ac,
+	* src/vinagre-main.c,
+	* src/vinagre-connection.c
+	* src/vinagre-commands.c: Use gio instead of gnome-vfs.
+
 2008-01-20  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vnagre-tab.c (open_vnc): Don't use new symbol from gtk-vnc trunk.
